<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintLayout.Child">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDismiss"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:layoutDirection="ltr"
        android:padding="@dimen/margin_small"
        app:icon="@drawable/ic_close"
        app:iconSize="18dp"
        app:iconTint="@color/txt_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/select_a_date"
        android:textSize="@dimen/text_size_h3"
        app:layout_constraintBottom_toBottomOf="@+id/btnDismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDismiss" />

    <TextView
        android:id="@+id/txtYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/year"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintEnd_toEndOf="@+id/spinnerYears"
        app:layout_constraintStart_toStartOf="@+id/spinnerYears"
        app:layout_constraintTop_toBottomOf="@+id/btnDismiss" />

    <TextView
        android:id="@+id/txtMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/month"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintEnd_toEndOf="@+id/spinnerMonths"
        app:layout_constraintStart_toStartOf="@+id/spinnerMonths"
        app:layout_constraintTop_toBottomOf="@+id/btnDismiss" />

    <TextView
        android:id="@+id/txtDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/day"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintEnd_toEndOf="@+id/spinnerDays"
        app:layout_constraintStart_toStartOf="@+id/spinnerDays"
        app:layout_constraintTop_toBottomOf="@+id/btnDismiss" />

    <Spinner
        android:id="@+id/spinnerYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:entries="@array/years"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        app:layout_constraintEnd_toStartOf="@+id/spinnerMonths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear" />

    <Spinner
        android:id="@+id/spinnerMonths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:entries="@array/months"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        app:layout_constraintEnd_toStartOf="@+id/spinnerDays"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinnerYears"
        app:layout_constraintTop_toBottomOf="@+id/txtMonth" />

    <Spinner
        android:id="@+id/spinnerDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:entries="@array/days"
        android:gravity="center"
        android:padding="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinnerMonths"
        app:layout_constraintTop_toBottomOf="@+id/txtDay" />

    <com.google.android.material.button.MaterialButton
        style="@style/Button.DialogPositiveButton"
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerYears" />

</androidx.constraintlayout.widget.ConstraintLayout>