<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ConstraintLayout.Child">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDismiss"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:layoutDirection="ltr"
        android:padding="@dimen/margin_small"
        app:icon="@drawable/ic_close"
        app:iconSize="18dp"
        app:iconTint="@color/txt_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/add_a_category"
        android:textColor="@color/txt_icon"
        android:textSize="@dimen/text_size_h3"
        app:layout_constraintBottom_toBottomOf="@+id/btnDismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDismiss" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCategoryName"
        style="@style/TextInputLayout.Custom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_very_large"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDismiss">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputCategoryName"
            style="@style/TextInputEditText.Custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_category"
            android:maxLength="15"
            tools:targetApi="m" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="@style/Button.DialogPositiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCategoryName" />

</androidx.constraintlayout.widget.ConstraintLayout>