<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.addtransaction.AddTransactionFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/back_button"
        android:layoutDirection="ltr"
        android:padding="@dimen/margin_normal"
        android:src="@drawable/ic_arrow_back"
        app:icon="@drawable/ic_arrow_back"
        app:iconSize="24dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNewTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_transaction"
        android:textSize="@dimen/text_size_h1"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBackButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/background_rounded_white"
        android:padding="@dimen/margin_normal"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackButton"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupBtnTransactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedButton="@id/btnIncome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIncome"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="@dimen/text_size_h4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExpense"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textSize="@dimen/text_size_h4" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="32dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/blue_grey_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupBtnTransactionType">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blue_grey_50"
                android:backgroundTintMode="add"
                android:hint="@string/amount"
                android:inputType="number"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/blue_grey_50"
        android:enabled="false"
        android:text="@string/add"
        android:textColor="@color/blue_grey_100"
        android:textSize="@dimen/text_size_h3"
        app:iconPadding="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/blue_grey_500" />
</androidx.constraintlayout.widget.ConstraintLayout>