<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_50"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imgToolbarIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="@dimen/margin_normal"
        android:contentDescription="@string/toolbar_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_money_tracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtToolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h1"
        app:layout_constraintBottom_toBottomOf="@id/imgToolbarIcon"
        app:layout_constraintStart_toEndOf="@id/imgToolbarIcon"
        app:layout_constraintTop_toTopOf="@+id/imgToolbarIcon" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollviewCenter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        app:layout_constraintBottom_toTopOf="@+id/btnAddTransaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgToolbarIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_small">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_very_small"
                android:background="@drawable/background_rounded_white"
                android:padding="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/spinnerDateType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/date_type"
                    android:padding="@dimen/margin_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDateSelection"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="@dimen/text_size_h4"
                    app:icon="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerDateType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinnerDateType"
                    tools:text="2022/09/20" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/groupBtnTransactionType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:checkedButton="@id/btnAll"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerDateType"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnIncome"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAll"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnExpense"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/background_rounded_white"
                android:padding="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/txtTransactionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTransactions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTransactionTitle" />

                <TextView
                    android:id="@+id/txtNoTransaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/no_transaction"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/txtTransactionTitle"
                    app:layout_constraintStart_toStartOf="@+id/txtTransactionTitle"
                    app:layout_constraintTop_toBottomOf="@+id/txtTransactionTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnAddTransaction"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_very_large"
        android:backgroundTint="@color/blue_grey_50"
        android:text="@string/transaction"
        android:textColor="@color/blue_grey_700"
        android:textSize="@dimen/text_size_h3"
        app:icon="@drawable/ic_round_add"
        app:iconPadding="@dimen/margin_small"
        app:iconTint="@color/blue_grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/blue_grey_500"
        app:strokeColor="@color/blue_grey_100"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
